--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,6 +3,10 @@ main = "src/main.js"
 compatibility_date = "2024-06-20"
 compatibility_flags = ["nodejs_compat"]
 
+[observability]
+enabled = true
+head_sampling_rate = 1
+
 [triggers]
 crons = ["0 */6 * * *"]
 
@@ -12,3 +16,4 @@ bucket_name = "storage"
 
 [vars]
 SCHEDULED = 24
+IGNORE = "conchbrain_1qaz2wsx3"
